Fix multi-select flex wrap. Remove .no-text outdated class.

--- a/backend/app/assets/stylesheets/spree/backend/plugins/_select2.scss
+++ b/backend/app/assets/stylesheets/spree/backend/plugins/_select2.scss
@@ -92,7 +92,7 @@
     background-image: none;
     background-color: $input-bg;
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     align-items: center;
 
     .select2-search-choice {
